# algorithmology-systemsense

./: .coveragerc  .mdlrc  README.md
.github/workflows/: build.yml  systemsense.yml
config/: gatorgrade.yml
systemsense/: pyproject.toml
systemsense/systemsense/: benchmark.py  constants.py  detect.py  execute.py  main.py  util.py
systemsense/tests/: test_benchmark.py  test_constants.py  test_detect.py  test_execute.py  test_util.py
writing/: reflection.md
