[tool.poetry]
name = "systemsense"
version = "0.1.0"
description = "System sense: detect hardware details and run micro-benchmarks"
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
systemsense = "systemsense.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
typer = "^0.9.0"
psutil = "^5.9.7"
pyperf = "^2.6.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-randomly = "^3.15.0"
pymarkdownlnt = "^0.9.15"
mypy = "^1.8.0"
symbex = "^1.4"
ruff = "^0.1.11"
types-psutil = "^5.9.5.20240106"
pytest-clarity = "^1.0.1"
mdtoc = "^1.3"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 79
ignore = [
    "E501", # do not check line length
]
select = [
    "E",    # pycodestyle errors
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
project = "systemsense"
tests = "tests"
readme = "../README.md"
reflection = "../writing/reflection.md"
coverage-test-command = "pytest -s --cov-context=test --cov-fail-under=90 --cov-config .coveragerc --cov-report term-missing --cov-report json --cov --cov-branch"
coverage-test-command-silent = "pytest -x --show-capture=no --cov-config .coveragerc --cov-report term-missing --cov-report json --cov --cov-branch"
fixformat-command = { var = "ruff format {project} {tests}", recursive = true }
format-command = { var = "ruff format --check {project} {tests}", recursive = true }
markdownlint-command = { var = "poetry run pymarkdown --config .pymarkdown.cfg scan {readme} {reflection}", recursive = true }
mypy-command = {var = "mypy {project} {tests}", recursive = true}
symbex-typed-command = {var = "symbex -s --untyped -d {project} --check", recursive = true}
symbex-documented-command = {var = "symbex -s --undocumented -d {project} --check", recursive = true}
test-command = "pytest -x -s -vv -n auto"
test-silent-command = "pytest -x --show-capture=no"

[tool.taskipy.tasks]
all = "task format && task mypy && task test && task coverage"
lint = "task format && task mypy && task symbex && task markdownlint"
symbex = "task symbex-typed && task symbex-documented"
coverage = { cmd = "{coverage-test-command}", help = "Run test coverage monitoring", use_vars = true }
coverage-silent = { cmd = "{coverage-test-command-silent}", help = "Run test coverage monitoring", use_vars = true }
format = { cmd = "{format-command}", help = "Run the ruff formatter on source code", use_vars = true }
format-fix = { cmd = "{fixformat-command}", help = "Run the ruff formatter to fix source code", use_vars = true}
markdownlint = { cmd = "{markdownlint-command}", help = "Run the markdown linter on text files", use_vars = true }
mypy = { cmd = "{mypy-command}", help = "Run the mypy type checks to find potential type errors", use_vars = true }
symbex-typed = { cmd = "{symbex-typed-command}", help = "Run symbex for fully typed functions", use_vars = true }
symbex-documented = { cmd = "{symbex-documented-command}", help = "Run symbex for documentation", use_vars = true }
test = { cmd = "{test-command}", help = "Run tests with order randomization and distribution", use_vars = true }
test-silent = { cmd = "{test-silent-command}", help = "Run tests silently without plugins", use_vars = true }
mdtoc-readme = { cmd = "mdtoc ../README.md", help = "Generate the TOC for the README" }
mdtoc-reflection = { cmd = "mdtoc ../writing/reflection.md", help = "Generate the TOC for the reflection" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
